--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "description": "A web interface for Alpha-CC (Chinese Chess AI)",
   "scripts": {
     "dev": "webpack serve --mode development --config webpack.common.ts",
-    "build": "webpack --mode production --config webpack.common.ts && yarn post-build",
+    "build": "webpack --mode production --config webpack.common.ts",
+    "postbuild": "ts-node ./scripts/postbuild.ts",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d dist",
     "prepare": "husky install",
-    "post-build": "ts-node ./scripts/post-build.ts",
     "serve": "serve dist"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/Alpha-CC/alpha-cc-web"
   },
+  "homepage": "https://alpha-cc.github.io/alpha-cc-web",
   "author": "Yuhao Chen <yuhaochen0107@gmail.com>",
   "license": "MIT",
   "dependencies": {
@@ -52,6 +55,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "fork-ts-checker-webpack-plugin": "^6.2.12",
     "fs-extra": "^10.0.0",
+    "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.3.2",
     "husky": "^6.0.0",
     "less": "^4.1.1",
