--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "scripts": {
     "dev": "webpack serve --mode development --config webpack.common.ts",
     "build": "webpack --mode production --config webpack.common.ts",
-    "postbuild": "ts-node ./scripts/postbuild.ts",
-    "prepare": "husky install",
-    "serve": "serve dist"
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -53,7 +51,6 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "fork-ts-checker-webpack-plugin": "^6.2.12",
     "fs-extra": "^10.0.0",
-    "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.3.2",
     "husky": "^6.0.0",
     "less": "^4.1.1",
@@ -64,7 +61,6 @@
     "prettier": "^2.3.2",
     "react-dev-utils": "^11.0.4",
     "sass-loader": "^12.1.0",
-    "serve": "^11.3.2",
     "size-plugin": "^2.0.2",
     "style-loader": "^3.0.0",
     "stylelint": "^13.13.1",
