--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,7 @@
 {
-  "short_name": "Hotdog App",
-  "name": "Create Hotdog App Sample",
+  "short_name": "Alpha CC",
+  "name": "Alpha CC",
   "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
     {
       "src": "logo192.png",
       "type": "image/png",
