feat: finish move rule

--- a/.eslintrc
+++ b/.eslintrc
@@ -60,7 +60,11 @@
           "object"
         ]
       }
-    ]
+    ],
+    "import/prefer-default-export": "off",
+    "jsx-a11y/click-events-have-key-events": "off",
+    "jsx-a11y/no-noninteractive-element-interactions": "off",
+    "jsx-a11y/no-static-element-interactions": "off"
   },
   "ignorePatterns": ["**/dist/**/*", "**/node_modules/**/*"],
   "overrides": [
